fixed bottom home page
html still not responsive !

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -56,7 +56,7 @@ header::after {
     margin-top: 1.5rem;
     padding: 15px;
     float: right;
-    display: inline-block;
+    /* display: inline-block; */
     background-color: #4353FF;
 }
 .signupbutton a{
@@ -66,7 +66,7 @@ header::after {
     margin-right: 1rem;
     margin-top: 1.5rem;
     padding: 15px;
-    float: right;
+    /* float: right; */
     display: inline-block;
     background-color: #E4E4E4;
 }
